--- a/sass/components/_footer-socnetworks.scss
+++ b/sass/components/_footer-socnetworks.scss
@@ -1,5 +1,10 @@
+.footer-socnetworks {
+  margin-bottom: 60px;
+}
+
 .footer-socnetworks__list {
   display: flex;
+  justify-content: center;
 }
 
 .footer-socnetworks__link {
