--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -9,10 +9,15 @@
 
 .footer-address {
   font-style: normal;
+  margin-top: 20px;
 }
 
 .footer-address .italic {
   font-style: italic;
+}
+
+.footer-address_item:not(:first-child) {
+  margin-top: 8px;
 }
 
 .footer .link {
