--- a/css/main.css
+++ b/css/main.css
@@ -26,16 +26,33 @@ img {
 }
 
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
   margin-left: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .visually-hidden {
@@ -59,10 +76,10 @@ img {
 .section-title {
   color: #212121;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.179;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .portfolio-section {
@@ -71,12 +88,9 @@ img {
   line-height: 1.9;
 }
 
-.btn,
-.hero__btn,
+.btn, .hero__btn,
 .footer-form__btn-subscription,
-.modal-form__btn-send,
-.button-set__btn,
-.modal__btn-close {
+.modal-form__btn-send, .button-set__btn, .modal__btn-close {
   display: inline-block;
   cursor: pointer;
   text-align: center;
@@ -99,8 +113,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero__btn:hover,
-.hero__btn:focus,
+.hero__btn:hover, .hero__btn:focus,
 .footer-form__btn-subscription:hover,
 .footer-form__btn-subscription:focus,
 .modal-form__btn-send:hover,
@@ -119,7 +132,8 @@ img {
   padding-right: 28px;
   padding-top: 10px;
   padding-left: 29px;
-  margin-left: 12px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-form__icon-send {
@@ -135,17 +149,13 @@ img {
   font-size: 16px;
   line-height: 1.625;
   border-radius: 4px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shaddow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shaddow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-set__btn:hover,
-.button-set__btn:focus {
+.button-set__btn:hover, .button-set__btn:focus {
   background-color: #2196f3;
   color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .modal__btn-close {
@@ -163,8 +173,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__btn-close:hover,
-.modal__btn-close:focus {
+.modal__btn-close:hover, .modal__btn-close:focus {
   fill: #2196f3;
 }
 
@@ -177,32 +186,27 @@ img {
 
 .overlay {
   max-width: 1600px;
-  padding: 300 0;
+  padding: 300px 0;
   margin-left: auto;
   margin-right: auto;
   background-color: #2f303a;
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/bg.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
 }
 
 .hero {
   color: #ffffff;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
@@ -215,6 +219,7 @@ img {
 
 .section-advantage__title {
   color: #212121;
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -222,17 +227,40 @@ img {
   margin-bottom: 10px;
 }
 
-.section-advantage__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+@media screen and (min-width: 768px) {
+  .section-advantage__title {
+    text-align: left;
+  }
 }
 
-.section-advantage__item {
-  flex-basis: calc((100% - 120px) / 4);
-  margin-left: 30px;
-  margin-top: 30px;
+@media screen and (min-width: 480px) {
+  .section-advantage__list {
+    margin-top: -30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .section-advantage__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-top: -30x;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .section-advantage__item {
+    margin-top: 30px;
+    margin-left: 15px;
+    margin-bottom: 0px;
+    margin-right: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .section-advantage__item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
 }
 
 .section-advantage__item::before {
@@ -247,23 +275,29 @@ img {
 }
 
 .icon-antenna::before {
-  background-image: url('../images/antenna.svg');
+  background-image: url("../images/antenna.svg");
 }
 
 .icon-clock::before {
-  background-image: url('../images/clock.svg');
+  background-image: url("../images/clock.svg");
 }
 
 .icon-diagram::before {
-  background-image: url('../images/diagram.svg');
+  background-image: url("../images/diagram.svg");
 }
 
 .icon-astronaut::before {
-  background-image: url('../images/astronaut.svg');
+  background-image: url("../images/astronaut.svg");
 }
 
 .section-workset {
   padding-top: 0;
+}
+
+@media (max-width: 1199px) {
+  .section-workset {
+    display: none;
+  }
 }
 
 .section-workset__list {
@@ -317,21 +351,11 @@ img {
   margin-bottom: 10px;
 }
 
-.section-our-team__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
 .section-our-team__item {
-  flex-basis: calc((100% - 120px) / 4);
-  margin-left: 30px;
   margin-top: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
   background-color: #ffffff;
 }
 
@@ -352,12 +376,10 @@ img {
   align-items: center;
   border-radius: 50%;
   fill: #afb1b8;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socnetworks__link:hover,
-.socnetworks__link:focus {
+.socnetworks__link:hover, .socnetworks__link:focus {
   background-color: #2196f3;
   fill: #ffffff;
 }
@@ -366,22 +388,19 @@ img {
   margin-right: 10px;
 }
 
-.section-clients {
-  padding-bottom: 88px;
-}
-
 .section-clients__list {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
-  margin-left: -30px;
+  margin-left: -15px;
 }
 
 .section-clients__item {
-  display: flex;
-  flex-basis: calc((100% - 180px) / 6);
+  width: calc((100% - 2 * 30px) / 2);
   margin-top: 30px;
-  margin-left: 30px;
+  margin-left: 15px;
+  margin-bottom: 0px;
+  margin-right: 15px;
 }
 
 .section-clients__link {
@@ -393,12 +412,10 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-clients__link:hover,
-.section-clients__link:focus {
+.section-clients__link:hover, .section-clients__link:focus {
   border-color: #2196f3;
   fill: #2196f3;
   filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
@@ -406,12 +423,16 @@ img {
 
 .button-set {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .button-set__item:not(:last-child) {
   margin-right: 8px;
+}
+
+.button-set__item:nth-child(-n + 3) {
+  margin-bottom: 15px;
 }
 
 .card-set__title {
@@ -429,21 +450,11 @@ img {
   padding: 20px 24px;
 }
 
-.card-set {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
-.card-set__item {
-  flex-basis: calc((100% - 90px) / 3);
-  margin-left: 30px;
+.card-set__item:not(:first-child) {
   margin-top: 30px;
 }
 
-.card-set__item:hover,
-.card-set__item:focus {
+.card-set__item:hover, .card-set__item:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -482,12 +493,11 @@ img {
 .logo {
   color: #2196f3;
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.666;
 }
 
-.logo:hover,
-.logo:focus,
+.logo:hover, .logo:focus,
 .logo:hover .part-logo,
 .logo:focus .part-logo {
   color: #2196f3;
@@ -501,101 +511,10 @@ img {
   color: #ffffff;
 }
 
-.footer-logo {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-logo:hover,
-.footer-logo:focus,
+.footer-logo:hover, .footer-logo:focus,
 .footer-logo:hover .part-logo,
 .footer-logo:focus .part-logo {
   color: #2196f3;
-}
-
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-}
-
-.site-nav__item + .site-nav__item {
-  margin-left: 50px;
-}
-
-.site-nav__link {
-  display: block;
-  color: #212121;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.site-nav__link--current {
-  color: #2196f3;
-  position: relative;
-}
-
-.site-nav__link--current::after {
-  position: absolute;
-  bottom: -1px;
-  display: block;
-  content: '';
-  width: 100%;
-  height: 4px;
-  background-color: currentColor;
-  border-radius: 2px;
-}
-
-.site-nav__link:hover,
-.site-nav__link:focus {
-  color: #2196f3;
-}
-
-.coordinates-nav {
-  display: flex;
-  margin-left: auto;
-}
-
-.coordinates-nav__item + .coordinates-nav__item {
-  margin-left: 50px;
-}
-
-.coordinates-nav__link {
-  display: flex;
-  align-items: center;
-  color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.coordinates-nav__link:hover,
-.coordinates-nav__link:focus {
-  color: #2196f3;
-  fill: currentColor;
-}
-
-.coordinates-nav__icon {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
-.item-envelope {
-  margin-left: 10px;
-}
-
-.main-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header-page__nav {
-  display: flex;
-  align-items: center;
 }
 
 .header-page {
@@ -613,40 +532,34 @@ img {
 
 .footer-address {
   font-style: normal;
+  margin-top: 20px;
 }
 
 .footer-address .italic {
   font-style: italic;
 }
 
+.footer-address_item:not(:first-child) {
+  margin-top: 8px;
+}
+
 .footer .link {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer .link:hover,
-.footer .link:focus {
+.footer .link:hover, .footer .link:focus {
   color: #2196f3;
 }
 
-.footer-grid {
-  display: flex;
-  justify-content: space-between;
-}
-
 .footer-grid__part {
-  flex-basis: calc((50% - 45px) / 2);
-  align-self: baseline;
-}
-
-.footer-subscription {
-  flex-basis: calc(50% - 15px);
-  align-self: baseline;
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .footer-socnetworks__title,
 .footer-subscription__title {
   margin-bottom: 20px;
-  text-align: left;
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -654,8 +567,13 @@ img {
   color: #ffffff;
 }
 
+.footer-socnetworks {
+  margin-bottom: 60px;
+}
+
 .footer-socnetworks__list {
   display: flex;
+  justify-content: center;
 }
 
 .footer-socnetworks__link {
@@ -670,18 +588,12 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-socnetworks__link:hover,
-.footer-socnetworks__link:focus {
+.footer-socnetworks__link:hover, .footer-socnetworks__link:focus {
   background-color: #2196f3;
 }
 
 .footer-socnetworks__item:not(:last-child) {
   margin-right: 10px;
-}
-
-.footer-form__field {
-  display: flex;
-  justify-content: flex-end;
 }
 
 .footer-form__input {
@@ -695,6 +607,7 @@ img {
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 20px;
 }
 
 .backdrop {
@@ -724,10 +637,9 @@ img {
   top: 50%;
   left: 50%;
   padding: 40px;
-  width: 528px;
+  width: 450px;
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -825,15 +737,13 @@ img {
 .modal-form__policy {
   margin-left: 8px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.666;
+  letter-spacing: 0.03em;
   color: #757575;
 }
 
 .modal-form__link-accept {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
   color: #2196f3;
 }
 
