--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -40,7 +40,9 @@
   padding-right: 28px;
   padding-top: 10px;
   padding-left: 29px;
-  margin-left: 12px;
+  margin-left: auto;
+  margin-right: auto;
+  // margin-left: 12px;
 }
 
 .footer-form__icon-send {
