--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,6 +1,6 @@
 .footer-form__field {
-  display: flex;
-  justify-content: flex-end;
+  // display: flex;
+  // justify-content: flex-end;
 }
 
 .footer-form__input {
@@ -14,4 +14,6 @@
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
+
+  margin-bottom: 20px;
 }
