--- a/sass/components/_footer-grid.scss
+++ b/sass/components/_footer-grid.scss
@@ -1,22 +1,26 @@
-.footer-grid {
-  display: flex;
-  justify-content: space-between;
-}
+// .footer-grid {
+//   display: flex;
+//   justify-content: space-between;
+// }
 
 .footer-grid__part {
-  flex-basis: calc((50% - 45px) / 2);
-  align-self: baseline;
+  text-align: center;
+  margin-bottom: 60px;
+
+  // flex-basis: calc((50% - 45px) / 2);
+  // align-self: baseline;
 }
 
-.footer-subscription {
-  flex-basis: calc(50% - 15px);
-  align-self: baseline;
-}
+// .footer-subscription {
+//   flex-basis: calc(50% - 15px);
+//   align-self: baseline;
+// }
 
 .footer-socnetworks__title,
 .footer-subscription__title {
   margin-bottom: 20px;
-  text-align: left;
+  // text-align: left;
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
