--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -26,16 +26,30 @@ img {
 }
 
 .container {
-  width: 1200px;
+  // width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
   margin-left: auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  // padding-top: 94px;
+  // padding-bottom: 94px;
 }
 
 .visually-hidden {
@@ -59,10 +73,14 @@ img {
 .section-title {
   color: $text-color-title;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.179;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  // font-size: 36px;
+  // line-height: 1.17;
+  // margin-bottom: 50px;
 }
 
 .portfolio-section {
