--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .overlay {
   max-width: 1600px;
-  padding: 300 0;
+  padding: 300px 0;
   margin-left: auto;
   margin-right: auto;
   background-color: $bg-dark;
@@ -18,14 +18,18 @@
 .hero {
   color: $text-color-white;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  // padding-top: 200px;
+  // padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
+  // font-size: 44px;
+  // line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
