--- a/sass/components/_portfolio-button-set.scss
+++ b/sass/components/_portfolio-button-set.scss
@@ -1,9 +1,15 @@
 .button-set {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  // justify-content: center;
+  // margin-bottom: 50px;
 }
 
 .button-set__item:not(:last-child) {
   margin-right: 8px;
+}
+
+.button-set__item:nth-child(-n + 3) {
+  margin-bottom: 15px;
 }
