--- a/sass/components/_portfolio-card-set.scss
+++ b/sass/components/_portfolio-card-set.scss
@@ -14,16 +14,18 @@
 }
 
 .card-set {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  // display: flex;
+  // flex-wrap: wrap;
+  // margin-left: -30px;
+  // margin-top: -30px;
 }
 
 .card-set__item {
-  flex-basis: calc((100% - 90px) / 3);
-  margin-left: 30px;
-  margin-top: 30px;
+  // flex-basis: calc((100% - 90px) / 3);
+  // margin-left: 30px;
+  &:not(:first-child) {
+    margin-top: 30px;
+  }
 
   &:hover,
   &:focus {
