--- a/sass/components/_section-clients.scss
+++ b/sass/components/_section-clients.scss
@@ -1,19 +1,30 @@
 .section-clients {
-  padding-bottom: 88px;
+  // padding-bottom: 88px;
 }
 
 .section-clients__list {
   display: flex;
   flex-wrap: wrap;
+  // margin-top: -30px;
+  // margin-left: -30px;
   margin-top: -30px;
-  margin-left: -30px;
+  margin-left: -15px;
 }
 
 .section-clients__item {
-  display: flex;
-  flex-basis: calc((100% - 180px) / 6);
+  // display: flex;
+  // flex-basis: calc((100% - 180px) / 6);
+  // margin-top: 30px;
+  // margin-left: 30px;
+  width: calc((100% - 2 * 30px) / 2);
   margin-top: 30px;
-  margin-left: 30px;
+  margin-left: 15px;
+  margin-bottom: 0px;
+  margin-right: 15px;
+
+  // @media screen and (min-width: 768px) {
+
+  // }
 }
 
 .section-clients__link {
