--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,40 +1,40 @@
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-}
+// .site-nav {
+//   display: flex;
+//   margin-left: 93px;
+// }
 
-.site-nav__item + .site-nav__item {
-  margin-left: 50px;
-}
+// .site-nav__item + .site-nav__item {
+//   margin-left: 50px;
+// }
 
-.site-nav__link {
-  display: block;
-  color: $text-color-title;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
+// .site-nav__link {
+//   display: block;
+//   color: $text-color-title;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
 
-  &--current {
-    color: $accent-color;
-    position: relative;
+//   &--current {
+//     color: $accent-color;
+//     position: relative;
 
-    &::after {
-      position: absolute;
-      bottom: -1px;
-      display: block;
-      content: '';
-      width: 100%;
-      height: 4px;
-      background-color: currentColor;
-      border-radius: 2px;
-    }
-  }
+//     &::after {
+//       position: absolute;
+//       bottom: -1px;
+//       display: block;
+//       content: '';
+//       width: 100%;
+//       height: 4px;
+//       background-color: currentColor;
+//       border-radius: 2px;
+//     }
+//   }
 
-  &:hover,
-  &:focus {
-    color: $accent-color;
-  }
-}
+//   &:hover,
+//   &:focus {
+//     color: $accent-color;
+//   }
+// }
