--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,6 +1,14 @@
 .footer-form__field {
-  // display: flex;
-  // justify-content: flex-end;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .footer-form__input {
@@ -15,5 +23,10 @@
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 
-  margin-bottom: 20px;
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 12px;
+  }
 }
