--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -26,7 +26,6 @@ img {
 }
 
 .container {
-  // width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -46,10 +45,15 @@ img {
 }
 
 .section {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  // padding-top: 94px;
-  // padding-bottom: 94px;
+  @media screen and (min-width: 480px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .visually-hidden {
@@ -73,14 +77,18 @@ img {
 .section-title {
   color: $text-color-title;
   font-weight: 700;
-  font-size: 28px;
-  line-height: 1.179;
-  text-align: center;
-  margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+    font-size: 28px;
+    line-height: 1.179;
+    text-align: center;
+    margin-bottom: 30px;
+  }
 
-  // font-size: 36px;
-  // line-height: 1.17;
-  // margin-bottom: 50px;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio-section {
