--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -18,19 +18,30 @@
 .hero {
   color: $text-color-white;
   text-align: center;
-  // padding-top: 200px;
-  // padding-bottom: 200px;
-  padding-top: 118px;
-  padding-bottom: 118px;
+
+  @media screen and (min-width: 480px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
   font-weight: 900;
-  font-size: 26px;
-  line-height: 1.62;
-  // font-size: 44px;
-  // line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 480px) {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
