--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -86,9 +86,12 @@
   font-size: 12px;
   line-height: 1.666;
   letter-spacing: 0.03em;
-  // font-size: 14px;
-  // line-height: 1.71;
   color: $text-color-primary;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__link-accept {
