--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -27,8 +27,6 @@
   left: 50%;
   padding: 40px;
 
-  width: 450px;
-  // width: 528px;
   background-color: $bg-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -36,6 +34,13 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform $time $timing-function;
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
 
 .modal__title {
