--- a/sass/components/_portfolio-button-set.scss
+++ b/sass/components/_portfolio-button-set.scss
@@ -1,15 +1,25 @@
 .button-set {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+
+  @media screen and (min-width: 480px) {
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
   // justify-content: center;
   // margin-bottom: 50px;
 }
 
-.button-set__item:not(:last-child) {
-  margin-right: 8px;
+.button-set__item:nth-child(-n + 3) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    margin-bottom: 15px;
+  }
 }
 
-.button-set__item:nth-child(-n + 3) {
-  margin-bottom: 15px;
+.button-set__item:not(:last-child) {
+  margin-right: 8px;
 }
