--- a/sass/components/_section-advantage.scss
+++ b/sass/components/_section-advantage.scss
@@ -25,30 +25,23 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -15px;
-    margin-top: -30x;
+    margin-left: -30px;
   }
-  // display: flex;
-  // flex-wrap: wrap;
-  // margin-left: -30px;
-  // margin-top: -30px;
 }
 
 .section-advantage__item {
   @media screen and (min-width: 480px) {
     margin-top: 30px;
-    margin-left: 15px;
-    margin-bottom: 0px;
-    margin-right: 15px;
+    margin-left: 30px;
   }
 
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 2 * 30px) / 2);
   }
 
-  // flex-basis: calc((100% - 120px) / 4);
-  // margin-left: 30px;
-  // margin-top: 30px;
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 120px) / 4);
+  }
 
   &::before {
     display: block;
