--- a/sass/components/_section-clients.scss
+++ b/sass/components/_section-clients.scss
@@ -1,30 +1,26 @@
-.section-clients {
-  // padding-bottom: 88px;
-}
-
 .section-clients__list {
   display: flex;
   flex-wrap: wrap;
-  // margin-top: -30px;
-  // margin-left: -30px;
   margin-top: -30px;
-  margin-left: -15px;
+  margin-left: -30px;
 }
 
 .section-clients__item {
-  // display: flex;
-  // flex-basis: calc((100% - 180px) / 6);
-  // margin-top: 30px;
-  // margin-left: 30px;
-  width: calc((100% - 2 * 30px) / 2);
   margin-top: 30px;
-  margin-left: 15px;
-  margin-bottom: 0px;
-  margin-right: 15px;
+  margin-left: 30px;
 
-  // @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) {
+    width: calc((100% - 2 * 30px) / 2);
+  }
 
-  // }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 180px) / 6);
+  }
 }
 
 .section-clients__link {
