--- a/sass/components/_section-our-team.scss
+++ b/sass/components/_section-our-team.scss
@@ -16,22 +16,30 @@
 }
 
 .section-our-team__list {
-  // display: flex;
-  // flex-wrap: wrap;
-  // margin-left: -30px;
-  // margin-top: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 
 .section-our-team__item {
-  // flex-basis: calc((100% - 120px) / 4);
-  // margin-left: 30px;
   margin-top: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   padding-bottom: 24px;
-  // padding-bottom: 30px;
   background-color: $bg-white;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 120px) / 4);
+    padding-bottom: 30px;
+  }
 }
 
 .section-our-team p {
