--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199.98px) {
   .section {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -85,15 +85,10 @@ img {
 .section-title {
   color: #212121;
   font-weight: 700;
-}
-
-@media screen and (min-width: 480px) {
-  .section-title {
-    font-size: 28px;
-    line-height: 1.179;
-    text-align: center;
-    margin-bottom: 30px;
-  }
+  font-size: 28px;
+  line-height: 1.179;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -221,13 +216,8 @@ img {
 .hero {
   color: #ffffff;
   text-align: center;
-}
-
-@media screen and (min-width: 480px) {
-  .hero {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -242,13 +232,8 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
-}
-
-@media screen and (min-width: 480px) {
-  .hero__title {
-    font-size: 26px;
-    line-height: 1.62;
-  }
+  font-size: 26px;
+  line-height: 1.62;
 }
 
 @media screen and (min-width: 1200px) {
@@ -279,25 +264,21 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .section-advantage__list {
-    margin-top: -30px;
-  }
+.section-advantage__list {
+  margin-top: -30px;
+  margin-left: -30px;
 }
 
 @media screen and (min-width: 768px) {
   .section-advantage__list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
   }
 }
 
-@media screen and (min-width: 480px) {
-  .section-advantage__item {
-    margin-top: 30px;
-    margin-left: 30px;
-  }
+.section-advantage__item {
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -472,7 +453,7 @@ img {
   margin-left: 30px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .section-clients__item {
     width: calc((100% - 2 * 30px) / 2);
   }
@@ -514,7 +495,7 @@ img {
   flex-wrap: wrap;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .button-set {
     margin-bottom: 40px;
   }
@@ -527,7 +508,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .button-set__item:nth-child(-n + 3) {
     margin-bottom: 15px;
   }
@@ -561,7 +542,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .card-set__item:not(:first-child) {
     margin-top: 30px;
   }
@@ -704,7 +685,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .footer-grid__part {
     text-align: center;
   }
@@ -809,7 +790,7 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .footer-form__input {
     margin-bottom: 20px;
   }
