--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -23,7 +23,7 @@
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 
-  @media screen and (min-width: 480px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     margin-bottom: 20px;
   }
   @media screen and (min-width: 1200px) {
