--- a/sass/components/_footer-grid.scss
+++ b/sass/components/_footer-grid.scss
@@ -17,9 +17,8 @@
 }
 
 .footer-grid__part {
-  @media screen and (min-width: 480px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     text-align: center;
-    // margin-bottom: 60px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -31,7 +30,6 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-basis: calc(50% - 45px);
-    // justify-content: space-between;
     align-items: baseline;
     text-align: left;
   }
