--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -45,7 +45,7 @@ img {
 }
 
 .section {
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 1199.98px) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -77,12 +77,10 @@ img {
 .section-title {
   color: $text-color-title;
   font-weight: 700;
-  @media screen and (min-width: 480px) {
-    font-size: 28px;
-    line-height: 1.179;
-    text-align: center;
-    margin-bottom: 30px;
-  }
+  font-size: 28px;
+  line-height: 1.179;
+  text-align: center;
+  margin-bottom: 30px;
 
   @media screen and (min-width: 1200px) {
     font-size: 36px;
