--- a/sass/components/_portfolio-button-set.scss
+++ b/sass/components/_portfolio-button-set.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     margin-bottom: 40px;
   }
 
@@ -10,12 +10,10 @@
     justify-content: center;
     margin-bottom: 30px;
   }
-  // justify-content: center;
-  // margin-bottom: 50px;
 }
 
 .button-set__item:nth-child(-n + 3) {
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     margin-bottom: 15px;
   }
 }
