--- a/sass/components/_section-clients.scss
+++ b/sass/components/_section-clients.scss
@@ -9,7 +9,7 @@
   margin-top: 30px;
   margin-left: 30px;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     width: calc((100% - 2 * 30px) / 2);
   }
 
