--- a/css/main.css
+++ b/css/main.css
@@ -107,10 +107,11 @@ img {
 
 .btn, .hero__btn,
 .footer-form__btn-subscription,
-.modal-form__btn-send, .button-set__btn, .modal__btn-close {
+.modal-form__btn-send, .button-set__btn, .modal__btn-close, .menu-btn {
   display: inline-block;
   cursor: pointer;
   text-align: center;
+  margin: 0;
   padding: 0;
   border: none;
   background-color: transparent;
@@ -199,6 +200,36 @@ img {
   margin-right: auto;
   margin-left: auto;
   padding: 10px 55px 10px 56px;
+}
+
+.menu-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.menu-btn .icon-close_menu {
+  display: none;
+}
+
+.menu-btn.is-open .icon-close_menu {
+  display: block;
+}
+
+.menu-btn.is-open .icon-menu {
+  display: none;
+}
+
+.menu-btn:hover, .menu-btn:focus {
+  fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
 }
 
 .overlay {
@@ -608,7 +639,22 @@ img {
   color: #2196f3;
   font-family: Raleway, sans-serif;
   font-size: 24px;
-  line-height: 1.666;
+  line-height: 1.17;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .logo {
+    margin-top: 26px;
+    margin-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 
 .logo:hover, .logo:focus,
@@ -631,8 +677,110 @@ img {
   color: #2196f3;
 }
 
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav__item + .site-nav__item {
+  margin-left: 50px;
+}
+
+.site-nav__link {
+  display: block;
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.site-nav__link--current {
+  color: #2196f3;
+  position: relative;
+}
+
+.site-nav__link--current::after {
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+  border-radius: 2px;
+}
+
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196f3;
+}
+
+.coordinates-nav {
+  display: flex;
+  margin-left: auto;
+}
+
+.coordinates-nav__item + .coordinates-nav__item {
+  margin-left: 50px;
+}
+
+.coordinates-nav__link {
+  display: flex;
+  align-items: center;
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.coordinates-nav__link:hover, .coordinates-nav__link:focus {
+  color: #2196f3;
+  fill: currentColor;
+}
+
+.coordinates-nav__icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.item-envelope {
+  margin-left: 10px;
+}
+
 .header-page {
+  position: relative;
   border-bottom: 1px solid #ececec;
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-page__nav {
+  display: flex;
+  align-items: center;
+}
+
+.menu-container {
+  background-color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  }
+  .menu-container.is-open {
+    display: block;
+  }
 }
 
 .footer {
@@ -811,6 +959,15 @@ img {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
+}
+
+@media screen and (max-width: 480px) {
+  .backdrop {
+    padding-top: 93px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -825,26 +982,28 @@ img {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .modal {
-    width: 450px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
   }
 }
 
