--- a/sass/components/_header-page.scss
+++ b/sass/components/_header-page.scss
@@ -1,13 +1,32 @@
 .header-page {
+  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
-// .main-nav {
-//   display: flex;
-//   align-items: center;
-// }
+.main-nav {
+  display: flex;
+  align-items: center;
+}
 
-// .header-page__nav {
-//   display: flex;
-//   align-items: center;
-// }
+.header-page__nav {
+  display: flex;
+  align-items: center;
+}
+
+.menu-container {
+  background-color: $bg-white;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
+
+    &.is-open {
+      display: block;
+    }
+  }
+}
