--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,9 +2,19 @@
   color: $accent-color;
   font-family: $font-logo;
   font-size: 24px;
-  line-height: 1.666;
-  // font-size: 26px;
-  // line-height: 1.2;
+  line-height: 1.17;
+
+  margin-top: 16px;
+  margin-bottom: 16px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 26px;
+    margin-bottom: 26px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+  }
 
   &:hover,
   &:focus,
