--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,6 +8,14 @@
 
   opacity: 1;
   transition: opacity $time $timing-function;
+
+  @media screen and (max-width: 480px) {
+    padding-top: 93px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -22,24 +30,26 @@
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   padding: 40px;
-
   background-color: $bg-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transform: translate(-50%, -50%) scale(1);
   transition: transform $time $timing-function;
+  @media screen and (min-width: 480px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
 
-  @media screen and (min-width: 768px) {
-    width: 450px;
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    width: 100%;
   }
+
   @media screen and (min-width: 1200px) {
-    width: 528px;
+    max-width: 528px;
   }
 }
 
