--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import './components/logo';
 @import './components/site-nav';
 @import './components/coordinates-nav';
+@import './components/socials-nav';
 @import './components/header-page';
 @import './components/footer';
 @import './components/footer-grid';
