--- a/sass/components/_header-page.scss
+++ b/sass/components/_header-page.scss
@@ -22,11 +22,14 @@
     top: 100%;
     left: 0;
     width: 100%;
+
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 1px 3px rgba(0, 0, 0, 0.16);
 
     &.is-open {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      padding: 48px 40px;
     }
   }
 }
