--- a/css/main.css
+++ b/css/main.css
@@ -636,6 +636,7 @@ img {
 }
 
 .logo {
+  display: block;
   color: #2196f3;
   font-family: Raleway, sans-serif;
   font-size: 24px;
@@ -677,6 +678,12 @@ img {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .site-nav__item:not(:last-child) {
     margin-bottom: 32px;
@@ -686,16 +693,32 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
 .site-nav__link {
   color: #212121;
   font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (max-width: 767px) {
   .site-nav__link {
     font-size: 40px;
     line-height: 1.175;
-    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    display: flex;
+    font-size: 14px;
+    line-height: 1.14;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
 
@@ -704,8 +727,27 @@ img {
   position: relative;
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav__link--current::after {
+    position: absolute;
+    bottom: -1px;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+    border-radius: 2px;
+  }
+}
+
 .site-nav__link:hover, .site-nav__link:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .coordinates-nav {
+    margin-left: 84px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -717,12 +759,25 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .coordinates-nav__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
 .coordinates-nav__link {
   font-weight: 500;
   font-size: 24px;
   line-height: 1.16666;
   letter-spacing: 0.02em;
   color: #757575;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .coordinates-nav__link {
+    font-size: 12px;
+    line-height: 1.1666;
+  }
 }
 
 .coordinates-nav__link:hover, .coordinates-nav__link:focus {
@@ -749,11 +804,17 @@ img {
 @media screen and (min-width: 768px) {
   .coordinates-nav__icon {
     fill: currentColor;
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .coordinates-nav__icon {
     margin-right: 10px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .item-envelope {
     margin-left: 10px;
   }
@@ -790,14 +851,12 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.main-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header-page__nav {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .menu-container {
@@ -817,6 +876,13 @@ img {
     display: flex;
     flex-direction: column;
     padding: 48px 40px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .menu-container {
+    display: flex;
+    align-items: center;
   }
 }
 
