--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,7 +1,10 @@
-// .site-nav {
-//   display: flex;
-//   margin-left: 93px;
-// }
+.site-nav {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+
+  // margin-left: 93px;
+}
 
 // .site-nav__item + .site-nav__item {
 //   margin-left: 50px;
@@ -17,38 +20,48 @@
       margin-bottom: 302px;
     }
   }
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 }
 
 .site-nav__link {
   // display: block;
   color: $text-color-title;
   font-weight: 500;
-  // font-size: 14px;
-  // line-height: 1.14;
-  // letter-spacing: 0.02em;
-  // padding-top: 32px;
-  // padding-bottom: 32px;
+  letter-spacing: 0.02em;
 
   @media screen and (max-width: 767px) {
     font-size: 40px;
     line-height: 1.175;
-    text-align: center;
+    // text-align: center;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    font-size: 14px;
+    line-height: 1.14;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 
   &--current {
     color: $accent-color;
     position: relative;
-
-    //   &::after {
-    //     position: absolute;
-    //     bottom: -1px;
-    //     display: block;
-    //     content: '';
-    //     width: 100%;
-    //     height: 4px;
-    //     background-color: currentColor;
-    //     border-radius: 2px;
-    //   }
+    @media screen and (min-width: 768px) {
+      &::after {
+        position: absolute;
+        bottom: -1px;
+        display: block;
+        content: '';
+        width: 100%;
+        height: 4px;
+        background-color: currentColor;
+        border-radius: 2px;
+      }
+    }
   }
 
   &:hover,
