--- a/sass/components/_coordinates-nav.scss
+++ b/sass/components/_coordinates-nav.scss
@@ -2,13 +2,18 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-left: 84px;
   }
-  //   display: flex;
-  //   margin-left: auto;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: 305px;
+  }
 }
 
-// .coordinates-nav__item + .coordinates-nav__item {
-//   margin-left: 50px;
-// }
+.coordinates-nav__item + .coordinates-nav__item {
+  @media screen and (min-width: 1200px) {
+    margin-left: 30px;
+  }
+}
 
 .coordinates-nav__item {
   @media screen and (max-width: 767px) {
@@ -27,18 +32,13 @@
 }
 
 .coordinates-nav__link {
-  // display: flex;
-  // align-items: center;
-
-  // font-size: 14px;
-  // line-height: 1.14;
   font-weight: 500;
   font-size: 24px;
   line-height: 1.16666;
   letter-spacing: 0.02em;
   color: $text-color-primary;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     font-size: 12px;
     line-height: 1.1666;
   }
@@ -72,11 +72,5 @@
 
   @media screen and (min-width: 1200px) {
     margin-right: 10px;
-  }
-}
-
-.item-envelope {
-  @media screen and (min-width: 1200px) {
-    margin-left: 10px;
   }
 }
