--- a/sass/components/_header-page.scss
+++ b/sass/components/_header-page.scss
@@ -4,17 +4,12 @@
 }
 
 .main-nav {
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
-
-// .header-page__nav {
-//   display: flex;
-//   align-items: center;
-// }
 
 .menu-container {
   background-color: $bg-white;
@@ -36,7 +31,7 @@
     }
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
   }
